# project

./: .env  .env.backup  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  roadmap.txt  test_payload.json
.github/: copilot-instructions.md
algorithms/: PDR.py  filters.py  fingerprint.py  fusion.py  pathfinding.py
data/: corridor_graph.json  final_sensor_log.csv  init_stats.py  qr_events.json  record_realtime.py  room_positions.csv  sensor_data.csv  sensor_data.json  utils.py
legacy_tools/: Kalmanfilter.py  PDR.py  addCol.py  finalAlgo.py
nginx/: nginx.conf
qr_generator/: generate_qr.py
results/: notes.md
scripts/: build_corridor_graph.py  collect_sensor_data.py  digitize_plan.py  enhanced_geolocate.py  enhanced_pdr.py  generate_qr.py  geolocate.py  graph_builder.py  graph_visualizer.py  import_sensor_data.py  init_stats.py  navigation_simulation.py  record_realtime.py  route.py  send_email.py  sensors.py  temp.py  update_live.py  utils.py
services/: geolocate.py  record_realtime.py  send_email.py  sensors.py  update_live.py  utils.py
simulation/: simu_combined.py  simu_pdr.py  simu_qr.py  simu_qr_json.py
tests/: api_test_collect_sensor.sh  api_test_confirm_position.sh  api_test_fusion.sh  api_test_position.sh  api_test_qr_email.sh  api_test_route.sh  api_test_update_position.sh  run_all.sh  test_api_endpoints.py  test_email.py  test_filter.py  test_fingerprint.py  test_fusion.py  test_init_stats.py  test_integration.py  test_pdr.py  test_position.py  test_qr.py  test_utils.py  (+3 more)
(+322 files in other folders)
