[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "pyqt5>=5.15.11",
    "pytest>=8.4.1",
    "qrcode>=8.2",
    "scikit-learn>=1.7.0",
]
